Correcting styling and aligning of elements in large screens. Refactor code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ li + li {
       font-size: 4.8rem;
       line-height: 5.6rem;
       text-align: left;
-      margin-bottom: 0; }
+      padding-top: 2em; }
     .content__paragraph {
       font-size: 1.8rem;
       line-height: 2.8rem;
